--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
-		<!-- <script src="keuzes.js" defer></script> -->
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 		<link rel="icon" href="#"/>
-		<title>...</title>
+		<title>HCI portfolio Anna</title>
 	</head>
 	<body>
+		<a name="menu"></a>
 		<header>
 			<h1>HCI portfolio</h1>
 			<p>Anna - CMD 2d - 2020</p>
+			<nav>
+				<a href="#vr">AR & VR</a><a href="#wearables">Wearables</a><a href="#creatures">Artificial creatures</a><a href="#play">Playfull interaction</a><a href="#workshops">Workshops</a><a href="#gastcollege">Gastcollege</a>
+			</nav>
 		</header>
 		<main>
+			<a name="vr"></a>
 			<article>
 				<h2>AR & VR</h2>
 				<h3>Onderzoek</h3>
@@ -25,6 +29,7 @@
 				<h3>Reflectie</h3>
 				<p></p>
 			</article>
+			<a name="wearables"></a>
 			<article>
 				<h2>Wearables</h2>
 				<h3>Onderzoek</h3>
@@ -36,6 +41,7 @@
 				<h3>Reflectie</h3>
 				<p></p>
 			</article>
+			<a name="creatures"></a>
 			<article>
 				<h2>Artificial creatures</h2>
 				<h3>Onderzoek</h3>
@@ -47,6 +53,7 @@
 				<h3>Reflectie</h3>
 				<p></p>
 			</article>
+			<a name="play"></a>
 			<article>
 				<h2>Playfull interaction</h2>
 				<h3>Onderzoek</h3>
@@ -58,7 +65,7 @@
 				<h3>Reflectie</h3>
 				<p></p>
 			</article>
-
+			<a name="workshops"></a>
 			<article>
 				<h2>Workshops</h2>
 				<h3>AR & VR</h3>
@@ -68,6 +75,7 @@
 				<h3>CV</h3>
 				<p></p>
 			</article>
+			<a name="gastcollege"></a>
 			<article>
 				<h2>Gastcollege</h2>
 				<p></p>
@@ -75,5 +83,6 @@
 				<p></p>
 			</article>
 		</main>
+		<a href="#menu" id="up">&#8679</a>
 	</body>
 </html>
