--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
 				<h3>Experimenteren</h3>
 				<p>
 					Omdat ik erg niewschierig was naar het zware progamma dat we moesten downloaden voor de les, heb ik Unreal Engine voor de les al geopend en gekeken wat je ermee kan doen. Na een korte uitleg een heel wat puzzelen heb ik het voor elkaar gekregen om drie vierkantjes van verschillende formaten op elkaar te stapelen in een VR envoirement. Dit is mijn eerste experiment.
-			`	</p>
+				</p>
 				<img src="3dview1.png"/>
 				<img src="3dview2.png"/>
 				<p>
 					Ik heb ook geexperimenteerd met AR in Micosoft 3D viewer.
 				</p>
+				<video controls>
+  				<source src="aframechallenge.mp4" type="video/mp4">Je kan het filmpje niet kijken in deze browser.</video>
 				<h3>Product</h3>
 				<p></p>
 				<h3>Reflectie</h3>
