--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<article>
 				<h2>AR & VR</h2>
 				<h3>Onderzoek</h3>
-				<img src="vrbril.jpg" class="klein">
+				<img src="media/vrbril.jpg" class="klein">
 				<p>
 					Om te beginnen met dit onderwerp wilde ik, na het zien van de veelbelovende voorbeelden, zelf eens VR proberen. AR heb ik vaker gezien (o.a. Pokemon Go en Snapchat), dus ik was heet meest nieuwschierig naar VR.
 					Ik heb een VR bril die ik ben gaan testen door VR 360&#176 filmpjes te bekijken op youtube. Dit was erg leuk, ik vond vooral de reisfilmpjes leuk waarin je bijvoorbeeld <a href="https://youtu.be/lJype_TafRk">rond kon kijken in Australie.</a> Ook heb ik een echte VR film gevonden met geanimeerde beestjes. Ik vond het leuk dat dit een VR experience met een verhallijn was.
@@ -55,20 +55,20 @@
 				</p>
 				<p>
 					Na het onderzoek naar VR en AR projecten ben ik gaan kijken naar software die je kan gebruiken om VR en AR experiences mee te maken.
-					Ik heb na Unreal Engine gekeken naar Adobe Dimention en Adobe Aero, Google ARCore en Micosoft 3D viewer.
+					Ik heb na Unreal Engine gekeken naar Adobe Dimention en Adobe Aero, Google ARCore, A-Frame, Cinema 4D lite en Micosoft 3D viewer.
 				</p>
-				<img src="unrealtest.png"/>
+				<img src="media/unrealtest.png"/>
 				<h3>Experimenteren</h3>
 				<p>
 					Omdat ik erg niewschierig was naar het zware progamma dat we moesten downloaden voor de les, heb ik Unreal Engine voor de les al geopend en gekeken wat je ermee kan doen. Na een korte uitleg een heel wat puzzelen heb ik het voor elkaar gekregen om drie vierkantjes van verschillende formaten op elkaar te stapelen in een VR envoirement. Dit is mijn eerste experiment.
 				</p>
-				<img src="3dview1.png"/>
-				<img src="3dview2.png"/>
+				<img src="media/Micosoft3D (1).png"/>
+				<img src="media/Micosoft3D (2).png"/>
 				<p>
 					Ik heb ook geexperimenteerd met AR in Micosoft 3D viewer.
 				</p>
 				<video controls>
-  				<source src="aframechallenge.mp4" type="video/mp4">Je kan het filmpje niet kijken in deze browser.</video>
+  				<source src="media/workshop_aframe (15).mp4" type="video/mp4">Je kan het filmpje niet kijken in deze browser.</video>
 				<h3>Product</h3>
 				<p></p>
 				<h3>Reflectie</h3>
@@ -114,7 +114,15 @@
 			<article>
 				<h2>Workshops</h2>
 				<h3>AR & VR</h3>
-				<p></p>
+				<p>Voor deze workshop hadden we twee challenges, een challenge met A-Frame en een challenge met Unreal Engine</p>
+				<p>
+					<b>A-Frame</b><br />
+					<img src="media/workshop_aframe (1).png"><img src="media/workshop_aframe (2).png"><img src="media/workshop_aframe (3).png"><img src="media/workshop_aframe (12).mp4">
+				</p>
+				<p>
+					<b>Unreal Engine</b><br />
+					<img src="">
+				</p>
 				<h3>Arduino</h3>
 				<p></p>
 				<h3>CV</h3>
