--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
 				<p>
 					Ik heb ook geexperimenteerd met AR in Micosoft 3D viewer.
 				</p>
-				<video controls>
-  				<source src="media/workshop_aframe (15).mp4" type="video/mp4">Je kan het filmpje niet kijken in deze browser.</video>
 				<h3>Product</h3>
 				<p></p>
 				<h3>Reflectie</h3>
@@ -117,7 +115,7 @@
 				<p>Voor deze workshop hadden we twee challenges, een challenge met A-Frame en een challenge met Unreal Engine</p>
 				<p>
 					<b>A-Frame</b><br />
-					<img src="media/workshop_aframe (1).png"><img src="media/workshop_aframe (2).png"><img src="media/workshop_aframe (3).png"><img src="media/workshop_aframe (12).mp4">
+					<img src="media/workshop_aframe (1).png"><img src="media/workshop_aframe (2).png"><img src="media/workshop_aframe (3).png"><video controls><source src="media/workshop_aframe (12).mp4" type="video/mp4">Je kan het filmpje niet kijken in deze browser.</video>
 				</p>
 				<p>
 					<b>Unreal Engine</b><br />
