--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 		<a name="menu"></a>
 		<header>
 			<h1>HCI portfolio</h1>
-			<p>Anna - CMD 2d - 2020</p>
+			<em>Anna - CMD 2d - 2020</em>
 			<nav>
 				<a href="#vr">AR & VR</a><a href="#wearables">Wearables</a><a href="#creatures">Artificial creatures</a><a href="#play">Playfull interaction</a><a href="#workshops">Workshops</a><a href="#gastcollege">Gastcollege</a>
 			</nav>
 		</header>
 		<main>
-			<a name="vr"></a>
+			<em>Welkom op het HCI portfolio van Anna. Hier zijn al mijn HCI opdrachten te vinden.</em>
+			<a name="vr"></p>
 			<article>
 				<h2>AR & VR</h2>
 				<h3>Onderzoek</h3>
@@ -67,6 +68,29 @@
 				<p>
 					Ik heb ook geexperimenteerd met AR in Micosoft 3D viewer.
 				</p>
+				<p>
+					De volgende dag hebben we les gehad. In de workshop ben ik verder gaan experimenteren met A-Frame en Unreal Engine. <a href="#workshops">Zie de workshop AR & VR voor het proces en het resultaat.</a>media/Micosoft3D (2).png
+				</p>
+				<div class="galerij">
+					<img src="media/Micosoft3D (3).png">
+					<img src="media/Micosoft3D (4).png">
+					<img src="media/Micosoft3D (5).png">
+					<img src="media/Micosoft3D (6).png">
+					<img src="media/Micosoft3D (7).png">
+					<img src="media/Micosoft3D (8).png">
+					<video controls>
+						<source src="media/Micosoft3D (9).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<video controls>
+						<source src="media/Micosoft3D (10).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<video controls>
+						<source src="media/Micosoft3D (11).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+				</div>
 				<h3>Product</h3>
 				<p></p>
 				<h3>Reflectie</h3>
@@ -113,14 +137,39 @@
 				<h2>Workshops</h2>
 				<h3>AR & VR</h3>
 				<p>Voor deze workshop hadden we twee challenges, een challenge met A-Frame en een challenge met Unreal Engine</p>
-				<p>
-					<b>A-Frame</b><br />
-					<img src="media/workshop_aframe (1).png"><img src="media/workshop_aframe (2).png"><img src="media/workshop_aframe (3).png"><video controls><source src="media/workshop_aframe (12).mp4" type="video/mp4">Je kan het filmpje niet kijken in deze browser.</video>
-				</p>
-				<p>
-					<b>Unreal Engine</b><br />
-					<img src="">
-				</p>
+				<p><b>A-Frame</b></p>
+				<div class="galerij">
+					<img src="media/workshop_aframe (1).png">
+					<img src="media/workshop_aframe (2).png">
+					<img src="media/workshop_aframe (3).png">
+					<img src="media/workshop_aframe (4).png">
+					<img src="media/workshop_aframe (5).png">
+					<img src="media/workshop_aframe (6).png">
+					<img src="media/workshop_aframe (7).png">
+					<img src="media/workshop_aframe (8).png">
+					<img src="media/workshop_aframe (9).png">
+					<img src="media/workshop_aframe (10).png">
+					<img src="media/workshop_aframe (11).png">
+					<video controls>
+						<source src="media/workshop_aframe (12).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_aframe (13).jpg">
+				</div>
+				<p><b>Unreal Engine</b></p>
+				<div class="galerij">
+					<img src="media/workshop_unreal (1).png">
+					<img src="media/workshop_unreal (2).png">
+					<img src="media/workshop_unreal (3).png">
+					<img src="media/workshop_unreal (4).png">
+					<img src="media/workshop_unreal (5).png">
+					<img src="media/workshop_unreal (6).png">
+					<video controls>
+						<source src="media/workshop_unreal (7).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_unreal (8).png">
+				</div>
 				<h3>Arduino</h3>
 				<p></p>
 				<h3>CV</h3>
@@ -134,6 +183,7 @@
 				<p></p>
 			</article>
 		</main>
+		<footer></footer>
 		<a href="#menu" id="up">&#8679</a>
 	</body>
 </html>
