--- a/index.html
+++ b/index.html
@@ -63,31 +63,32 @@
 				<p>
 					Omdat ik erg niewschierig was naar het zware progamma dat we moesten downloaden voor de les, heb ik Unreal Engine voor de les al geopend en gekeken wat je ermee kan doen. Na een korte uitleg een heel wat puzzelen heb ik het voor elkaar gekregen om drie vierkantjes van verschillende formaten op elkaar te stapelen in een VR envoirement. Dit is mijn eerste experiment.
 				</p>
-				<img src="media/Micosoft3D (1).png"/>
-				<img src="media/Micosoft3D (2).png"/>
+				<img src="media/microsoft3d (1).png"/>
+				<img src="media/microsoft3d (2).png"/>
 				<p>
 					Ik heb ook geexperimenteerd met AR in Micosoft 3D viewer.
 				</p>
 				<p>
-					De volgende dag hebben we les gehad. In de workshop ben ik verder gaan experimenteren met A-Frame en Unreal Engine. <a href="#workshops">Zie de workshop AR & VR voor het proces en het resultaat.</a>media/Micosoft3D (2).png
+					De volgende dag hebben we les gehad. In de workshop ben ik verder gaan experimenteren met A-Frame en Unreal Engine. <a href="#workshops">Zie de workshop AR & VR voor het proces en het resultaat.</a>
+				</p>
+				<p>
+					Ik zag dat het mogelijk was om met Micosoft 3D viewer ook 3d objecten te maken en ben hier mee gaan experimenteren. Het resultaat is een 3d landschapje. Ik heb van verschillende functies gebruik gemaakt, ik heb zelf dingen getekend maar ook afbeelingen, bestaande 3d objecten en texturen gebruikt. Het proces en resultaat is hier onder te zien.
 				</p>
 				<div class="galerij">
-					<img src="media/Micosoft3D (3).png">
-					<img src="media/Micosoft3D (4).png">
-					<img src="media/Micosoft3D (5).png">
-					<img src="media/Micosoft3D (6).png">
-					<img src="media/Micosoft3D (7).png">
-					<img src="media/Micosoft3D (8).png">
+					<img src="media/microsoft3d (3).png">
+					<img src="media/microsoft3d (4).png">
+					<img src="media/microsoft3d (5).png">
+					<img src="media/microsoft3d (6).png">
 					<video controls>
-						<source src="media/Micosoft3D (9).mp4" type="video/mp4">
+						<source src="media/microsoft3d (7).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
 					<video controls>
-						<source src="media/Micosoft3D (10).mp4" type="video/mp4">
+						<source src="media/microsoft3d (8).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
 					<video controls>
-						<source src="media/Micosoft3D (11).mp4" type="video/mp4">
+						<source src="media/microsoft3d (9).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
 				</div>
