--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
 				</div>
+				<p>
+					Ten slotte heb ik Adobe Dimension gedownload, en hiermee geexperimnteerd. Ik vond dit progamma erg fijn op te gebruiken. Hieronder is het proces en het resultaat te zien. Het koffie logo heb ik zelf getekend op mijn laptop.
+				</p>
+				<div class="galerij">
+					<img src="media/dimension (1).png">
+					<img src="media/dimension (2).png">
+					<img src="media/dimension (3).png">
+					<img src="media/dimension (4).png">
+					<img src="media/dimension (5).png">
+					<img src="media/dimension (6).png">
+					<iframe src="https://dimension.adobe.com/gltf/embed.html?assetId=4b641a01-f8a8-4f66-aef7-c11668ba65bf" style="border:none;" allowfullscreen allow="fullscreen; vr"></iframe>
+				</div>
 				<h3>Product</h3>
 				<p></p>
 				<h3>Reflectie</h3>
