--- a/index.html
+++ b/index.html
@@ -24,55 +24,55 @@
 				<h3>Onderzoek</h3>
 				<img src="media/vrbril.jpg" class="klein">
 				<p>
-					Om te beginnen met dit onderwerp wilde ik, na het zien van de veelbelovende voorbeelden, zelf eens VR proberen. AR heb ik vaker gezien (o.a. Pokemon Go en Snapchat), dus ik was heet meest nieuwschierig naar VR.
-					Ik heb een VR bril die ik ben gaan testen door VR 360&#176 filmpjes te bekijken op youtube. Dit was erg leuk, ik vond vooral de reisfilmpjes leuk waarin je bijvoorbeeld <a href="https://youtu.be/lJype_TafRk">rond kon kijken in Australie.</a> Ook heb ik een echte VR film gevonden met geanimeerde beestjes. Ik vond het leuk dat dit een VR experience met een verhallijn was.
+					Om te beginnen met dit onderwerp wilde ik, na het zien van de voorbeelden, zelf eens VR meemaken. AR heb ik vaker gezien (o.a. Pokemon Go en Snapchat), dus ik was heet meest nieuwschierig naar VR.
+					Ik heb een VR bril die ik ben gaan testen door een paar VR 360&#176 filmpjes te bekijken op YouTube. Dit was erg leuk, ik vond vooral de reisfilmpjes leuk waarin je bijvoorbeeld <a href="https://youtu.be/lJype_TafRk">rond kon kijken in Australië.</a> Ook heb ik een VR film gevonden met geanimeerde beestjes. Ik vond het leuk dat dit een VR experience met een verhaallijn was.
 				</p>
 				<p>
-					Toen ik VR en AR zelf uitgetest had ben ik op zoek gegeaan naar inspirerende VR projecten. Dit heb ik gedaan op Behance. Ik heb vier projecten gevonden die mij op verschillende manieren aanspreken:
+					Toen ik VR en AR zelf uitgetest had, ben ik op zoek gegeaan naar inspirerende VR projecten. Dit heb ik gedaan op Behance. Ik heb vier projecten gevonden die mij aanspreken:
 				</p>
 				<p>
 					<a href="https://www.behance.net/gallery/73623109/Improved-airport-experience-through-AR"><b>Improved airport experience through AR</b></a><br />
 					<i>Adrián Řezníček, Stanislav Bagin Lukas Stranak en PLATFORM Agency</i><br />
-					Dit project is gemaakt omdat mensen vaak gestresd zijn op viegvelden. Met de app willen ze het makkelijker maken om van de ingang van het vliegveld tot aan de bestemming te komen. Dit doen ze met AR.<br />
-					Dit project spreekt me aan omdat ik vind dat ze de kwaliteiten van AR goed gebruiken. Het is voor mij heel herkenbaar dat het op de kaart niet duidelijk is welke kant je op moet. Doordat je met AR de weg die je moet nemen in de echte context ziet, is dit veel duidelijker. Ook vind ik dat ze heel user-centred te werk zijn gegaan. Het desig is simpel en duidelijk. Als gebruiker zie je alleen wat je op dat moment nodig hebt (navigatie,inchecken enz. niet tegelijk).
+					Dit project is gemaakt omdat mensen vaak gestrest zijn op viegvelden. Met de app willen ze het makkelijker maken om van de ingang van het vliegveld tot aan de bestemming te komen. Dit doen ze met AR.<br />
+					Dit project spreekt me aan omdat ik vind dat ze de kwaliteiten van AR goed gebruiken. Het is voor mij heel herkenbaar dat het op de kaart niet duidelijk is welke kant je op moet. Doordat je met AR de weg die je moet nemen in de echte context ziet, is dit veel duidelijker. Ook vind ik dat ze heel user-centred te werk zijn gegaan. Het design is simpel en duidelijk. Als gebruiker zie je alleen wat je op dat moment nodig hebt.
 				</p>
 				<p>
 					<a href="https://www.behance.net/gallery/90840985/Singularity-VR-Experience"><b>Singularity VR Experience</b></a><br />
 					<i>Relajaelcoco studio</i><br />
 					Singularity is een VR motion graphic experience. Het is een soort film met als thema de evolutie van een wezen.<br />
-					Het design vind ik in dit project erg mooi, daardoor trok het meteen mijn aandacht. Ik vind het gebruik van 2d en 3d vormen in dit project interessant. Ook de verhaallijn spreekt mij aan, ik werd helmaal meegesleept in het verhaal. Soms werd ik wel een beetje misselijk van de snel bewegende vormen en kleuren.
+					Het design vind ik in dit project erg mooi, daardoor trok het mijn aandacht. Ik vind het gebruik van 2d en 3d vormen in dit project interessant. Ook de verhaallijn spreekt mij aan, ik werd helmaal meegesleept in het verhaal. Soms werd ik wel een beetje misselijk van de snel bewegende vormen en kleuren.
 				</p>
 				<p>
 					<a href="https://www.behance.net/gallery/72128145/Two-avant-garde-artists-in-three-dimensions"><b>Two avant-garde artists in three dimensions</b></a><br />
 					<i>Dima Neiaglov, Maxim Goudin, Illarion Gordon en Airborneape Studio </i><br />
-					In dit project hebben ze een digitaal alttelier gemaakt waarin je schilderijen kan maken.<br />
-					Bij dit project was ik onder de indruk van interactie. Je kan dingenen oppakken en verplaatsten. Ik vind de omgeving er gedetaliieerd uitzien. Het onderwerp kunst spreekt mij ook aan.
+					In dit project hebben ze een digitaal atelier gemaakt waarin je schilderijen kan maken.<br />
+					Bij dit project was ik onder de indruk van de interactie. Je kan bijna alles in het atelier oppakken en verplaatsen. Ik vind de omgeving er gedetailleerd uitzien. Het onderwerp kunst spreekt mij ook aan.
 				</p>
 				<p>
 					<a href="https://www.behance.net/gallery/82053451/ARVR-Realty"><b>AR\VR Realty</b></a><br />
 					<i>Oksana Romanovskaya</i><br />
-					In dit project word er gekeken naar de mogelijkheoden van AR en VR in vastgoed. Je kan met je telefoon rondkijken en informatie over verschillende gebouwen zien. Met VR kan een ronje lopen door het gebouw.<br />
-					Dit project spreekt met aan omdat het effectief gebruikt maakt van AR en VR. De app gebruiken is veel makkelijker dan een gebouw opzoeken voor informatie of een afspraak maken om een gebouw van binnen te bekijken. Ook is er goed nagedacht over het design.
+					In dit project wordt er gekeken naar de mogelijkheoden van AR en VR in vastgoed. Je kan met je telefoon rondkijken en informatie over verschillende gebouwen zien. Met VR kan je een rondje lopen door het gebouw.<br />
+					Dit project spreekt me aan omdat het effectief gebruik maakt van AR en VR. De app gebruiken is veel makkelijker dan een gebouw opzoeken voor informatie of een afspraak maken om een gebouw van binnen te bekijken. Ook is er goed nagedacht over het design.
 				</p>
 				<p>
 					Na het onderzoek naar VR en AR projecten ben ik gaan kijken naar software die je kan gebruiken om VR en AR experiences mee te maken.
-					Ik heb na Unreal Engine gekeken naar Adobe Dimention en Adobe Aero, Google ARCore, A-Frame, Cinema 4D lite en Micosoft 3D viewer.
+					Ik heb gekeken naar: Unreal Engine, Adobe Dimention en Adobe Aero, Google ARCore, A-Frame, Cinema 4D lite en Micosoft 3D viewer.
 				</p>
 				<img src="media/unrealtest.png"/>
 				<h3>Experimenteren</h3>
 				<p>
-					Omdat ik erg niewschierig was naar het zware progamma dat we moesten downloaden voor de les, heb ik Unreal Engine voor de les al geopend en gekeken wat je ermee kan doen. Na een korte uitleg een heel wat puzzelen heb ik het voor elkaar gekregen om drie vierkantjes van verschillende formaten op elkaar te stapelen in een VR envoirement. Dit is mijn eerste experiment.
+					Omdat ik erg niewsgierig was naar het programma dat we moesten downloaden voor de les, heb ik Unreal Engine voor de les al geopend en gekeken wat je ermee kan doen. Na een korte uitleg en heel wat puzzelen heb ik het voor elkaar gekregen om drie vierkantjes van verschillende formaten op elkaar te stapelen in een VR environment. Dit is mijn eerste experiment.
 				</p>
 				<img src="media/microsoft3d (1).png"/>
 				<img src="media/microsoft3d (2).png"/>
 				<p>
-					Ik heb ook geexperimenteerd met AR in Micosoft 3D viewer.
+					Ik heb ook geëxperimenteerd met AR in Micosoft 3D viewer.
 				</p>
 				<p>
-					De volgende dag hebben we les gehad. In de workshop ben ik verder gaan experimenteren met A-Frame en Unreal Engine. <a href="#workshops">Zie de workshop AR & VR voor het proces en het resultaat.</a>
+					De volgende dag hebben we les gehad. In de workshop ben ik verder gaan met experimenteren met A-Frame en Unreal Engine. <a href="#workshops">Zie de workshop AR & VR voor het proces en het resultaat.</a>
 				</p>
 				<p>
-					Ik zag dat het mogelijk was om met Micosoft 3D viewer ook 3d objecten te maken en ben hier mee gaan experimenteren. Het resultaat is een 3d landschapje. Ik heb van verschillende functies gebruik gemaakt, ik heb zelf dingen getekend maar ook afbeelingen, bestaande 3d objecten en texturen gebruikt. Het proces en resultaat is hier onder te zien.
+					Ik zag dat het mogelijk was om met Micosoft 3D viewer ook 3d objecten te maken en ben hier mee gaan experimenteren. Het resultaat is een 3d landschapje. Ik heb van verschillende functies gebruik gemaakt, ik heb zelf dingen getekend maar ook afbeeldingen, bestaande 3d objecten en texturen gebruikt. Het proces en resultaat is hier onder te zien.
 				</p>
 				<div class="galerij">
 					<img src="media/microsoft3d (3).png">
@@ -93,7 +93,7 @@
 					</video>
 				</div>
 				<p>
-					Ten slotte heb ik Adobe Dimension gedownload, en hiermee geexperimnteerd. Ik vond dit progamma erg fijn op te gebruiken. Hieronder is het proces en het resultaat te zien. Het koffie logo heb ik zelf getekend op mijn laptop.
+					Ten slotte heb ik Adobe Dimension gedownload, en hiermee geëxperimenteerd. Ik vond dit progamma erg fijn om te gebruiken. Hieronder is het proces en het resultaat te zien. Het koffielogo heb ik zelf getekend op mijn laptop.
 				</p>
 				<div class="galerij">
 					<img src="media/dimension (1).png">
