--- a/index.html
+++ b/index.html
@@ -184,7 +184,38 @@
 					<img src="media/workshop_unreal (8).png">
 				</div>
 				<h3>Arduino</h3>
-				<p></p>
+				<div class="galerij">
+					<img src="media/workshop_arduino (2).png">
+					<img src="media/workshop_arduino (3).jpg">
+					<img src="media/workshop_arduino (4).png">
+					<video controls>
+						<source src="media/workshop_arduino (5).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (6).png">
+					<video controls>
+						<source src="media/workshop_arduino (7).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (8).png">
+					<video controls>
+						<source src="media/workshop_arduino (9).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<video controls>
+						<source src="media/workshop_arduino (10).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<video controls>
+						<source src="media/workshop_arduino (11).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+					<img src="media/workshop_arduino (12).png">
+					<video controls>
+						<source src="media/workshop_arduino (13).mp4" type="video/mp4">
+						Je kan het filmpje niet kijken in deze browser.
+					</video>
+				</div>
 				<h3>CV</h3>
 				<p></p>
 			</article>
