--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					Ik heb een VR bril die ik ben gaan testen door een paar VR 360&#176 filmpjes te bekijken op YouTube. Dit was erg leuk, ik vond vooral de reisfilmpjes leuk waarin je bijvoorbeeld <a href="https://youtu.be/lJype_TafRk">rond kon kijken in Australië.</a> Ook heb ik een VR film gevonden met geanimeerde beestjes. Ik vond het leuk dat dit een VR experience met een verhaallijn was.
 				</p>
 				<p>
-					Toen ik VR en AR zelf uitgetest had, ben ik op zoek gegeaan naar inspirerende VR projecten. Dit heb ik gedaan op Behance. Ik heb vier projecten gevonden die mij aanspreken:
+					Toen ik VR en AR zelf uitgetest had, ben ik op zoek gegaan naar inspirerende VR projecten. Dit heb ik gedaan op Behance. Ik heb vier projecten gevonden die mij aanspreken:
 				</p>
 				<p>
 					<a href="https://www.behance.net/gallery/73623109/Improved-airport-experience-through-AR"><b>Improved airport experience through AR</b></a><br />
@@ -102,10 +102,11 @@
 					<img src="media/dimension (4).png">
 					<img src="media/dimension (5).png">
 					<img src="media/dimension (6).png">
-					<iframe src="https://dimension.adobe.com/gltf/embed.html?assetId=4b641a01-f8a8-4f66-aef7-c11668ba65bf" style="border:none;" allowfullscreen allow="fullscreen; vr"></iframe>
+					<iframe src="https://dimension.adobe.com/gltf/embed.html?assetId=4b641a01-f8a8-4f66-aef7-c11668ba65bf" allowfullscreen allow="fullscreen; vr"></iframe>
 				</div>
 				<h3>Product</h3>
 				<p></p>
+				<iframe allowfullscreen="false" src="https://momento360.com/e/u/ba18955ab2434e3f8d4750a0d39dd8c5?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=69.76666666666668" id="boomhut"></iframe>
 				<h3>Reflectie</h3>
 				<p></p>
 			</article>
