VR AR challenge

--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
 			<article>
 				<h2>AR & VR</h2>
 				<h3>Onderzoek</h3>
-				<img src="media/vrbril.jpg" class="klein">
+				<img src="media/vrbril.jpg" class="klein"/>
 				<p>
 					Om te beginnen met dit onderwerp wilde ik, na het zien van de voorbeelden, zelf eens VR meemaken. AR heb ik vaker gezien (o.a. Pokemon Go en Snapchat), dus ik was heet meest nieuwschierig naar VR.
-					Ik heb een VR bril die ik ben gaan testen door een paar VR 360&#176 filmpjes te bekijken op YouTube. Dit was erg leuk, ik vond vooral de reisfilmpjes leuk waarin je bijvoorbeeld <a href="https://youtu.be/lJype_TafRk">rond kon kijken in Australië.</a> Ook heb ik een VR film gevonden met geanimeerde beestjes. Ik vond het leuk dat dit een VR experience met een verhaallijn was.
+					Ik heb een VR bril die ik ben gaan testen door een paar VR 360&#176 filmpjes te bekijken op YouTube. Dit was erg leuk, ik vond vooral de reisfilmpjes leuk waarin je bijvoorbeeld <a href="https://youtu.be/lJype_TafRk" target="_blank">rond kon kijken in Australië.</a> Ook heb ik een VR film gevonden met geanimeerde beestjes. Ik vond het leuk dat dit een VR experience met een verhaallijn was.
 				</p>
 				<p>
 					Toen ik VR en AR zelf uitgetest had, ben ik op zoek gegaan naar inspirerende VR projecten. Dit heb ik gedaan op Behance. Ik heb vier projecten gevonden die mij aanspreken:
 				</p>
 				<p>
-					<a href="https://www.behance.net/gallery/73623109/Improved-airport-experience-through-AR"><b>Improved airport experience through AR</b></a><br />
+					<a href="https://www.behance.net/gallery/73623109/Improved-airport-experience-through-AR" target="_blank"><b>Improved airport experience through AR</b></a><br />
 					<i>Adrián Řezníček, Stanislav Bagin Lukas Stranak en PLATFORM Agency</i><br />
 					Dit project is gemaakt omdat mensen vaak gestrest zijn op viegvelden. Met de app willen ze het makkelijker maken om van de ingang van het vliegveld tot aan de bestemming te komen. Dit doen ze met AR.<br />
 					Dit project spreekt me aan omdat ik vind dat ze de kwaliteiten van AR goed gebruiken. Het is voor mij heel herkenbaar dat het op de kaart niet duidelijk is welke kant je op moet. Doordat je met AR de weg die je moet nemen in de echte context ziet, is dit veel duidelijker. Ook vind ik dat ze heel user-centred te werk zijn gegaan. Het design is simpel en duidelijk. Als gebruiker zie je alleen wat je op dat moment nodig hebt.
 				</p>
 				<p>
-					<a href="https://www.behance.net/gallery/90840985/Singularity-VR-Experience"><b>Singularity VR Experience</b></a><br />
+					<a href="https://www.behance.net/gallery/90840985/Singularity-VR-Experience" target="_blank"><b>Singularity VR Experience</b></a><br />
 					<i>Relajaelcoco studio</i><br />
 					Singularity is een VR motion graphic experience. Het is een soort film met als thema de evolutie van een wezen.<br />
 					Het design vind ik in dit project erg mooi, daardoor trok het mijn aandacht. Ik vind het gebruik van 2d en 3d vormen in dit project interessant. Ook de verhaallijn spreekt mij aan, ik werd helmaal meegesleept in het verhaal. Soms werd ik wel een beetje misselijk van de snel bewegende vormen en kleuren.
 				</p>
 				<p>
-					<a href="https://www.behance.net/gallery/72128145/Two-avant-garde-artists-in-three-dimensions"><b>Two avant-garde artists in three dimensions</b></a><br />
+					<a href="https://www.behance.net/gallery/72128145/Two-avant-garde-artists-in-three-dimensions" target="_blank"><b>Two avant-garde artists in three dimensions</b></a><br />
 					<i>Dima Neiaglov, Maxim Goudin, Illarion Gordon en Airborneape Studio </i><br />
 					In dit project hebben ze een digitaal atelier gemaakt waarin je schilderijen kan maken.<br />
 					Bij dit project was ik onder de indruk van de interactie. Je kan bijna alles in het atelier oppakken en verplaatsen. Ik vind de omgeving er gedetailleerd uitzien. Het onderwerp kunst spreekt mij ook aan.
 				</p>
 				<p>
-					<a href="https://www.behance.net/gallery/82053451/ARVR-Realty"><b>AR\VR Realty</b></a><br />
+					<a href="https://www.behance.net/gallery/82053451/ARVR-Realty" target="_blank"><b>AR\VR Realty</b></a><br />
 					<i>Oksana Romanovskaya</i><br />
 					In dit project wordt er gekeken naar de mogelijkheoden van AR en VR in vastgoed. Je kan met je telefoon rondkijken en informatie over verschillende gebouwen zien. Met VR kan je een rondje lopen door het gebouw.<br />
 					Dit project spreekt me aan omdat het effectief gebruik maakt van AR en VR. De app gebruiken is veel makkelijker dan een gebouw opzoeken voor informatie of een afspraak maken om een gebouw van binnen te bekijken. Ook is er goed nagedacht over het design.
@@ -75,10 +75,10 @@
 					Ik zag dat het mogelijk was om met Micosoft 3D viewer ook 3d objecten te maken en ben hier mee gaan experimenteren. Het resultaat is een 3d landschapje. Ik heb van verschillende functies gebruik gemaakt, ik heb zelf dingen getekend maar ook afbeeldingen, bestaande 3d objecten en texturen gebruikt. Het proces en resultaat is hier onder te zien.
 				</p>
 				<div class="galerij">
-					<img src="media/microsoft3d (3).png">
-					<img src="media/microsoft3d (4).png">
-					<img src="media/microsoft3d (5).png">
-					<img src="media/microsoft3d (6).png">
+					<img src="media/microsoft3d (3).png"/>
+					<img src="media/microsoft3d (4).png"/>
+					<img src="media/microsoft3d (5).png"/>
+					<img src="media/microsoft3d (6).png"/>
 					<video controls>
 						<source src="media/microsoft3d (7).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
@@ -96,19 +96,68 @@
 					Ten slotte heb ik Adobe Dimension gedownload, en hiermee geëxperimenteerd. Ik vond dit progamma erg fijn om te gebruiken. Hieronder is het proces en het resultaat te zien. Het koffielogo heb ik zelf getekend op mijn laptop.
 				</p>
 				<div class="galerij">
-					<img src="media/dimension (1).png">
-					<img src="media/dimension (2).png">
-					<img src="media/dimension (3).png">
-					<img src="media/dimension (4).png">
-					<img src="media/dimension (5).png">
-					<img src="media/dimension (6).png">
+					<img src="media/dimension (1).png"/>
+					<img src="media/dimension (2).png"/>
+					<img src="media/dimension (3).png"/>
+					<img src="media/dimension (4).png"/>
+					<img src="media/dimension (5).png"/>
+					<img src="media/dimension (6).png"/>
 					<iframe src="https://dimension.adobe.com/gltf/embed.html?assetId=4b641a01-f8a8-4f66-aef7-c11668ba65bf" allowfullscreen allow="fullscreen; vr"></iframe>
 				</div>
 				<h3>Product</h3>
-				<p></p>
+				<p>
+					Als eindproduct voor de VR challenge heb ik een 360&#176 VR illustatie gemaakt. Het is een illustratie van een boomhutten burgt, de boomhutten zijn overal om je heen te zien in de hoge bomen van het bos.
+				</p>
+				<p>
+					In mijn vrije tijd teken ik graag. Daarmee is dit eindproduct begonnen. Een begin van de boomhutten tekening had ik al eerder gemaakt, hier ben ik vele dagen mee bezig geweest. De tekening heeft een raar formaat omdat ik graag een vr panorama tekening wilde maken. Dit is mij nooit gelukt, omdat ik niet genoeg kennis van panorama's, 360&#176 foto's, 3D en VR had. Maar nu ik hier veel over geleerd had, wilde ik het nog eens proberen. En ik ben nog een stap verder gegaan: ik wilde van de illustatie geen panorama, maar een 360&#176 VR experence maken.
+				</p>
+				<img src="media/boomhut (1).jpg" class="groot"/>
+				<p>
+					Om te beginnen heb ik de oorspronkelijke tekening in photshop geopent om te kijken hoe de tekin er in VR uit zou zien. Hiervoor had ik er al voor gezogt dat de tekenig naadloos sluit door het begin van de tekeign te beruiken aan het eide van de andere kant. In Photoshop maakte ik van de teking een 'bolvormig panorama'. Het midden van de tekig zag er nog redelijk uit, maar toen ik naar boven en beneden keek zag ik de de grond en de lucht helmaal vervormt waren. Ik moest een ondergond en lucht toevoegen aan de tekening, zodat het een 360&# illustatie werd en geen panorama.
+				</p>
+				<div class="galerij">
+					<img src="media/boomhut (2).png"/>
+					<img src="media/boomhut (3).png"/>
+				</div>
+				<p>
+					Ik kon niet zomaar de gond en de lucht toevogen aan de tekening. Dit komt omdat een tekening in 360&# word vervormd. Er word gebruik gemaakt van een 'Equirectangular Image'. Zo'n vervorming komt voor wanneer je een 3d omgeving in 2d wilt weergeven. Op kaarden van de wereld zie je deze vervoming ook terugkomen, de kaarten zijn equirectangulaire afbeelingen. Om te begrijpen hoe ik in equirectangular perspectief kon tekenen heb ik gebruik gemaakt van een equirectangular grid. Hierop zie je duidelijk hoe de lijnen worden vervormd. Alle lijnen in de grid, zie je in VR als rechte lijnen.
+				</p>
+				<div class="galerij">
+					<img src="media/boomhut (4).jpg"/>
+					<img src="media/boomhut (5).jpg"/>
+				</div>
+				<p>
+					In Photoshop kan de de 'spherical map' van je afbeeling laden, hier zie je de equirectangulaire afbeeling. Wisslend tussen de 3d weergave en de spherical map heb ik een snelle schets gemaakt van hoe de lijnen er ongeveer uit moeten zien op de spherical map van de illusrtaie. Deze schets moest ik volgen om de lucht en de grond er op de juste wijze uit te laten zien in VR.
+				</p>
+				<div class="galerij">
+					<img src="media/boomhut (6).png"/>
+					<img src="media/boomhut (7).png"/>
+				</div>
+				<p>
+					Nu kon het tekenen beginnen! In het teken progmma Sketshbook heb ik de lucht en de grond vervormd getekend. En na een paar keer testen en aanpassen is het me gelukt om de lucht en grond juist weer te geven.
+				</p>
+				<div class="galerij">
+					<img src="media/boomhut (8).jpg" class="groot"/>
+					<div class="galerij">
+					<img src="media/boomhut (8).png"/>
+					<img src="media/boomhut (9).png"/>
+					<img src="media/boomhut (10).png"/>
+				</div>
+				</div>
+				<p>
+					Om de illustatie te testen heb ik de illustaie in de VR bril bekeken met een VR media player app en geupload naar momento360.com om de VR illustratie op deze website te kunnen laten zien.
+				</p>
+				<p>
+					Hier onder staat het definive product. Je kan zelf rond kijken door je muis over de afbeelding te slepen. Geniet van de natuur, de verschillende bomen en boomhutten en de kleinde details.
+				</p>
 				<iframe allowfullscreen="false" src="https://momento360.com/e/u/ba18955ab2434e3f8d4750a0d39dd8c5?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=69.76666666666668" id="boomhut"></iframe>
 				<h3>Reflectie</h3>
-				<p></p>
+				<p>
+					Ik ben positief verrast door de mogelijkheden van VR en AR. Voor dit vak had ik VR en AR wel eens uitgeprobeerd, maar ik dacht dat het een nieuwe technologie was die nog niet echt mainstreem gebruikt werd. Dit bleek helmaal niet waar te zijn. Ik ben erachter gekomen dat er al veel toepassijgen zijn voor VR en AR en dat je zelf ook al met VR of AR kan werken. Dit kan met een progamma zoals unreal engine. Dit progmaa vond ik er eerst ingewikkeld uit zien, maar bleek uiteindelijk logisch in elkaar te zitten. Tot slot heb ik kennis gemaakt met 3d design. Ik had nog geen idee wat de moeglijkhededen hiermee waren, maar in de toekomst ga ik progamma's zoals Adobe Dimnsion zeker vaker gebruiken.
+				</p>
+				<p>
+					Als eindproduct heb ik een 360&#176 VR illuystatie gemaakt. Ik vind het bijzonder dat ik dit heb kunnen maken omdat ik het al eerder heb geprobeerd, maar het toen niet lukte. Ik heb deze experence dus kunnen maken met de kennis die ik heb opgedaan in deze challenge. Ik ben erg blij met het eindresultaat omdat het precies is wat ik me oorspronkelijk had voorgesteld toen ik begon met het maken van de tekening.
+				</p>
 			</article>
 			<a name="wearables"></a>
 			<article>
@@ -153,52 +202,52 @@
 				<p>Voor deze workshop hadden we twee challenges, een challenge met A-Frame en een challenge met Unreal Engine</p>
 				<p><b>A-Frame</b></p>
 				<div class="galerij">
-					<img src="media/workshop_aframe (1).png">
-					<img src="media/workshop_aframe (2).png">
-					<img src="media/workshop_aframe (3).png">
-					<img src="media/workshop_aframe (4).png">
-					<img src="media/workshop_aframe (5).png">
-					<img src="media/workshop_aframe (6).png">
-					<img src="media/workshop_aframe (7).png">
-					<img src="media/workshop_aframe (8).png">
-					<img src="media/workshop_aframe (9).png">
-					<img src="media/workshop_aframe (10).png">
-					<img src="media/workshop_aframe (11).png">
+					<img src="media/workshop_aframe (1).png"/>
+					<img src="media/workshop_aframe (2).png"/>
+					<img src="media/workshop_aframe (3).png"/>
+					<img src="media/workshop_aframe (4).png"/>
+					<img src="media/workshop_aframe (5).png"/>
+					<img src="media/workshop_aframe (6).png"/>
+					<img src="media/workshop_aframe (7).png"/>
+					<img src="media/workshop_aframe (8).png"/>
+					<img src="media/workshop_aframe (9).png"/>
+					<img src="media/workshop_aframe (10).png"/>
+					<img src="media/workshop_aframe (11).png"/>
 					<video controls>
 						<source src="media/workshop_aframe (12).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
-					<img src="media/workshop_aframe (13).jpg">
+					<img src="media/workshop_aframe (13).jpg"/>
 				</div>
 				<p><b>Unreal Engine</b></p>
 				<div class="galerij">
-					<img src="media/workshop_unreal (1).png">
-					<img src="media/workshop_unreal (2).png">
-					<img src="media/workshop_unreal (3).png">
-					<img src="media/workshop_unreal (4).png">
-					<img src="media/workshop_unreal (5).png">
-					<img src="media/workshop_unreal (6).png">
+					<img src="media/workshop_unreal (1).png"/>
+					<img src="media/workshop_unreal (2).png"/>
+					<img src="media/workshop_unreal (3).png"/>
+					<img src="media/workshop_unreal (4).png"/>
+					<img src="media/workshop_unreal (5).png"/>
+					<img src="media/workshop_unreal (6).png"/>
 					<video controls>
 						<source src="media/workshop_unreal (7).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
-					<img src="media/workshop_unreal (8).png">
+					<img src="media/workshop_unreal (8).png"/>
 				</div>
 				<h3>Arduino</h3>
 				<div class="galerij">
-					<img src="media/workshop_arduino (2).png">
-					<img src="media/workshop_arduino (3).jpg">
-					<img src="media/workshop_arduino (4).png">
+					<img src="media/workshop_arduino (2).png"/>
+					<img src="media/workshop_arduino (3).jpg"/>
+					<img src="media/workshop_arduino (4).png"/>
 					<video controls>
 						<source src="media/workshop_arduino (5).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
-					<img src="media/workshop_arduino (6).png">
+					<img src="media/workshop_arduino (6).png"/>
 					<video controls>
 						<source src="media/workshop_arduino (7).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
-					<img src="media/workshop_arduino (8).png">
+					<img src="media/workshop_arduino (8).png"/>
 					<video controls>
 						<source src="media/workshop_arduino (9).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
@@ -211,7 +260,7 @@
 						<source src="media/workshop_arduino (11).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
 					</video>
-					<img src="media/workshop_arduino (12).png">
+					<img src="media/workshop_arduino (12).png"/>
 					<video controls>
 						<source src="media/workshop_arduino (13).mp4" type="video/mp4">
 						Je kan het filmpje niet kijken in deze browser.
